:rewind: revert client's proxy to localhost

--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "twind": "^0.16.16",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "http://server:6000",
+  "proxy": "http://localhost:6000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
